[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/inimigos/sapo.gd" type="Script" id=1]
[ext_resource path="res://sprites/inimigos/sapo/sapo1.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/sapo/sapo6.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/sapo/sapo8.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/sapo/sapo10.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/sapo/sapo14.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/sapo/sapo13.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/sapo/sapo7.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/sapo/sapo12.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/sapo/sapo9.png" type="Texture" id=10]
[ext_resource path="res://sprites/inimigos/sapo/sapo2.png" type="Texture" id=11]
[ext_resource path="res://sprites/inimigos/sapo/sapo3.png" type="Texture" id=12]
[ext_resource path="res://sprites/inimigos/sapo/sapo4.png" type="Texture" id=13]
[ext_resource path="res://sprites/inimigos/sapo/sapo5.png" type="Texture" id=14]
[ext_resource path="res://sprites/inimigos/sapo/sapo11.png" type="Texture" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.808
height = 18.0109

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.7226, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 155.185, 26.5769 )

[sub_resource type="Animation" id=4]
resource_name = "andando"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotacao/sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "atirando"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotacao/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.678431 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "morrendo"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotacao/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3 ]
}

[sub_resource type="Animation" id=8]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotacao/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
}

[node name="sapo" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
z_index = 6
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="rotacao" type="Node2D" parent="."]

[node name="cannon" type="Position2D" parent="rotacao"]
position = Vector2( 6.40472, 1.09126 )

[node name="sprite" type="Sprite" parent="rotacao"]
position = Vector2( -3.95139, -1.88988 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
offset = Vector2( 24.7506, -0.829185 )
hframes = 4
frame = 2

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 21.9839, 4.50272 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="sapo" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="shape" type="CollisionShape2D" parent="sapo"]
position = Vector2( 19.7225, 5.46655 )
shape = SubResource( 2 )

[node name="sensor" type="Area2D" parent="."]
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="sensor"]
position = Vector2( 20.775, 8.38241 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rotation = -0.00416541
z_index = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/andando = SubResource( 4 )
anims/atirando = SubResource( 5 )
anims/dano = SubResource( 6 )
anims/morrendo = SubResource( 7 )
anims/parado = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.15
autostart = true
[connection signal="body_entered" from="sapo" to="." method="_on_sapo_body_entered"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
